Version 0.1.2 (2006-12-28)

  - Made handling of mail headers more robust so that badly encoded
    headers don't produce a crash.
  - Improved documentation.
  - Made the mailing list header "Mailing-List" recognized in the
    from_mailing_list method of the Mail class.

Version 0.1.1 (2006-06-20)

  - Fixed race condition: Mail file opening for SHA1 calculation is
    now more robust.
  - Improved documentation.

Version 0.1 (2006-06-10)

  - First release.