@@ -1,3 +1,8 @@
+Version X (Y)
+
+  - Added feature that (if enabled) reloads the rc file when it has
+    been modified.
+
 Version 0.1.2 (2006-12-28)
 
   - Made handling of mail headers more robust so that badly encoded
